# pineline

./: .gitignore  .prettierignore  .readthedocs.yaml  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  theme.config.js  tsconfig.json
.github/workflows/: publish.yml  pypi.yml
components/: home.module.css  layout.module.css
consuming-draft/: stuffs.md
docs/source/: conf.py  index.rst
fonll/: .gitignore  README.md  bootstrap  pyproject.toml
fonll/assets/: activate  bench_master.py  compare_outputs.py  deact  preupdate  pyproject.toml  switch
fonll/assets/fonll/: analytical.py  compare.py
fonll/assets/theories/: 400.yaml  405.yaml
fonll/fonll/: analytical.py  commons.py  compare.py  numerical.py
fonll/scripts/: bench_new.py  switch
package/: README.md  pyproject.toml
pages/: _app.js  _meta.json  index.tsx  installation.mdx  introduction.mdx
pages/advanced/: code-highlighting.mdx
pages/examples/: _meta.json  exotic.mdx  modified-theory.mdx  new-data.mdx  standard.mdx
pages/nextra/: _meta.json
pages/nextra/advanced/: code-highlighting.mdx
pages/tutorials/: fktable.mdx  meta.json  setup.mdx
public/data/setup/: opcard-HERACOMBNCEP460.yaml  opcard-template.yaml
sphinx/: README.md  pyproject.toml
sphinx/docs/source/: index.rst
src/: old-home-cards.mdx  theme.config.js  theme.config.tsx
src/components/: avatar.module.css  avatar.tsx  gh-link.module.css  gh-link.tsx  home.module.css  internal-link.module.css  internal-link.tsx  layout.module.css  layout.tsx  static-resource.tsx
src/components/nextra/features/: style.module.css
src/pages/: _app.js  _app.tsx  _meta.json  about.mdx  index.mdx  index.module.css  index.tsx  installation.mdx  introduction.mdx  troubles.mdx  tutorials.mdx
src/pages/dev/: _meta.json  benchmarks.mdx  docs.mdx  performance.mdx  poetry.mdx  tests.mdx
src/pages/dev/nextra/: blog-theme.mdx  docs-theme.mdx  index.mdx
src/pages/dev/nextra/docs-theme/: components.mdx  start.mdx  theme-configuration.mdx
src/pages/dev/nextra/guide/: image.mdx  organize-files.mdx
src/pages/examples/: _meta.json  exotic.mdx  modified-theory.mdx  new-data.mdx  standard.mdx  vrap.mdx
src/pages/nextra/: get-started.mdx  index.mdx
src/pages/nextra/docs/: docs-theme.mdx  guide.mdx  index.mdx
src/pages/nextra/docs/docs-theme/: components.mdx  start.mdx  theme-configuration.mdx
src/pages/nextra/docs/guide/: image.mdx  markdown.mdx  organize-files.mdx
src/pages/nextra/features/: i18n.mdx  image.mdx  mdx.mdx
src/pages/nextra/themes/blog/: index.mdx
src/pages/nextra/themes/docs/: bleed.mdx  callout.mdx  configuration.mdx  index.mdx
src/pages/troubles/: installation.mdx
src/pages/tutorials/: _meta.json  fktable.mdx  setup-pineko.mdx  setup.mdx  vrap.mdx
src/style/: highlight.css
