[tool.poetry]
name = "pineline"
version = "0.0.0"
description = "Theory predictions for PDF fitting"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
eko = "^0.10.2"
pineko = "^0.2.5"
pineappl = "^0.5.7"
pinefarm = {version = "^0.2.1", optional = true, extras = ["full"]}


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/pineline/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
