[tool.poetry]
name = "pineline"
version = "0.0.0"
description = "Theory predictions for PDF fitting"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
eko = "^0.12.0"
pineko = "^0.3.3"
pineappl = "^0.5.9"
pinefarm = { version = "^0.2.2", optional = true }

[tool.poetry.extras]
full = ["pinefarm"]


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/pineline/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
