[tool.poetry]
name = "pineline"
version = "0.0.0"
description = "Theory predictions for PDF fitting"
authors = ["Andrea Barontini <andrea.barontini@mi.infn.it>", "Alessandro Candido <alessandro.candido@mi.infn.it>", "Juan Cruz Martinez <juan.cruz.martinez@cern.ch>", "Felix Hekhorn <felix.hekhorn@mi.infn.it>", "Christopher Schwan <christopher.schwan@physik.uni-wuerzburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
eko = "^0.14.0"
pineko = "^0.4.4"
pineappl = "^0.6.2"
pinefarm = { version = "0.3.1", optional = true }

[tool.poetry.extras]
full = ["pinefarm"]


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/pineline/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
