[tool.poetry]
name = "pineline"
version = "0.0.0"
description = "Theory pineline for fast predictions"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
sphinxcontrib-bibtex = "^2.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
